package edu.fiuba.algo3.modelo.Efecto;

import edu.fiuba.algo3.modelo.General.Jugador;

public interface Efecto {
    void aplicar(Jugador jugador);
}
