package edu.fiuba.algo3.modelo.Efecto;

import edu.fiuba.algo3.modelo.General.Jugador;

public class EfectoGeneral implements Efecto {
    public EfectoGeneral() {
    }

    public void aplicar(Jugador jugador) {
        // Efecto por defecto aplicado
    }
}
